# ptex-ng

./: .gitignore  .travis.yml  BLADE_ROOT  Build  ChangeLog  Makefile.am  Makefile.in  Makefile.linux.gcc  Makefile.macosx.clang  Makefile.win.msvc  README  README.0overview  README.1prerequisites  README.2building  README.3installing  README.4layout  README.5configure  README.6cross  README.7coding  README.md  TEXLIVE_REVISION  aclocal.m4  appveyor.yml  build-aptex.sh  build-pTeX-ng.sh  coerce.h  configure  configure.ac  dpx.c  dpx.h  itex.c  local.c  macros.h  make-dist.bat  memory.h  openinou.c  pool.c  ptex-kanji.c  ptex-module.c  ptex-ng-initex.c  (+31 more)
libs/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
libs/freetype2/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  version.ac
libs/freetype2/ac/: withenable.ac
libs/freetype2/freetype-PATCHES/: ChangeLog  TL-Changes
libs/libpaper/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure.ac  version.ac
libs/libpaper/include/: Makefile.am  Makefile.in
libs/libpaper/libpaper-PATCHES/: TL-Changes  patch-03-getopt  patch-04-unsigned
libs/libpaper/libpaper-src/: ChangeLog  config.h.in  configure.ac
libs/libpng/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  libpng.test  version.ac
libs/libpng/ac/: withenable.ac
libs/libpng/include/: Makefile.in
libs/libpng/libpng-1.6.15-PATCHES/: ChangeLog  TL-Changes
libs/libpng/libpng-PATCHES/: ChangeLog  TL-Changes  patch-02-backport-20160314-12e63e9
libs/zlib/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  version.ac
libs/zlib/ac/: withenable.ac  zlib.ac
libs/zlib/include/: Makefile.am  Makefile.in
libs/zlib/zlib-1.2.8-PATCHES/: ChangeLog  TL-Changes
src/libotf/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h  configure  configure.ac  libotf-config.1  libotf-config.in  libotf.pc.in
src/libotf/example/: otfdump.c
src/libotf/src/: .cvsignore  Makefile.am  config.h.in  otf.h  otfdrive.c  otfopen.c
texk/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
texk/kpathsea/: ChangeLog  Makefile.am  Makefile.in  NEWS  PROJECTS  absolute.c  access.c  aclocal.m4  atou.c  c-auto.in  c-ctype.h  c-dir.h  c-minmax.h  c-pathch.h  cnf.c  cnf.h  concat.c  concat3.c  config.h  configure  configure.ac  db.c  debug.c  default.h  elt-dirs.c  expand.c  expand.h  file-p.c  find-suffix.c  fontmap.c  getopt.c  hash.c  hash.h  kdefault.c  knj.c  knj.h  kpathsea.c  kpathsea.pc.in  kpsestat.c  kpsewhich.c  (+38 more)
texk/kpathsea/ac/: mktex.ac
texk/kpathsea/doc/: Makefile.in  kpathsea.info  kpathsea.texi  unixtex.texi
texk/kpathsea/man/: Makefile.am  Makefile.in  kpseaccess.man  kpsereadlink.man  kpsestat.man  mktexlsr.man  mktextfm.man
texk/kpathsea/tests/: cnfnewline.test  kpseaccess.test  kpsereadlink.test  kpsewhich.test
texk/kpathsea/win32/: ChangeLog  Makefile.am  Makefile.in  dirutil.c  dirutil.h  fmtutil.c  getdestdir.c  getdestdir.h  mktexfmt.c  mktexlsr.c  mktexmf.c  mktexpk.c  mktextfm.c  mktexupd.c  mktexupd.h  mktexupdmain.c
texk/libdpx/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  agl.c  agl.h  bmpimage.c  cff.h  cff_dict.h  cff_limits.h  cff_stdstr.h  cid.h  cid_basefont.h  cidtype0.c  cidtype0.h  cidtype2.h  cmap.c  cmap_p.h  cmap_write.c  config.h.in  configure  configure.ac  cs_type2.h  dpxconf.h  dpxcrypt.h  dpxfile.c  dpxfile.h  dpxutil.c  dvi.c  dvi_ng.c  dvicodes.h  dvipdfmx.c  dvipdfmx.h  epdf.c  error.c  error.h  jpegimage.h  mem.h  mfileio.c  (+56 more)
texk/libdpx/ac/: libdpx.ac  withenable.ac
texk/libdpx/data/: dvipdfmx.cfg
texk/libdpx/man/: dvipdfmx.1
texk/libdpx/tests/: annot.tex  bookm.tex  ids_2_6.dvi  image.dvi  opc_fe.dvi  paper.dvi  paper.tex  picbmp.bb  picbmp.xbb  picjp2.bb  picjp2.xbb  picjpeg.bb  picjpeg.xbb  picpdf.bb  picpdf.xbb  (+9 more)
texk/ptex-ng/: Makefile  README  aptex-functions.h  aptex-initex.c  aptex-io.c  aptex-io.h  aptex-kanji.c  aptex-local.c  aptex-macros.h  aptex-pdf.c  aptex-src.c  aptex-string-pool.c  aptex-synctex.c  aptex-synctex.h  aptex.c  aptex.h  aptex.rc  coerce.h  lsotfea.c  macros.h  ptex-ng-initex.c  ptex-ng-io.c  ptex-ng-kanji.c  ptex-ng-local.c  ptex-ng-module.c  ptex-ng-pdf.c  ptex-ng-pool.c  ptex-ng-src.c  ptex-ng-synctex.c  ptex-ng.c  ptex-ng.h
texk/ptexenc/: ChangeLog  ChangeLog.jp  Makefile.in  aclocal.m4  c-auto.in  configure  configure.ac  jisx0208.h  ptexenc.c  ptexenc.pc.in  version.ac
texlive/: .gitignore  .travis.yml  AGENTS.md  Build  CLAUDE.md  CODEX.md  CODE_OF_AI_CONDUCT.md  ChangeLog  Makefile.am  Makefile.in  README  README.0overview  README.1prerequisites  README.2building  README.3installing  README.4layout  README.5configure  README.6coding  README.6cross  README.7coding  README.7continuous  README.md  aclocal.m4  configure  configure.ac  reautoconf  tardate.ac  version.ac
texlive/am/: ChangeLog  README  bin_links.am  man.am  man1_links.am  recurse.am  script_links.am
texlive/build-aux/: README.TL  ar-lib  compile  config.guess  depcomp  texinfo.tex
texlive/doc/: ChangeLog  Makefile.am  Makefile.in  README.solaris  build-info.sh  build-tools.txt  buildinfo.sh  splitinfo.gawk  tlbuild.info  tlbuild.texi
texlive/extra/: README
texlive/libs/: .gitattributes  ChangeLog  Makefile.in  README  aclocal.m4  configure
texlive/m4/: ChangeLog  README  kpse-cairo-flags.m4  kpse-common.m4  kpse-cxx-hack.m4  kpse-freetype2-flags.m4  kpse-gd-flags.m4  kpse-harfbuzz-flags.m4  kpse-icu-flags.m4  kpse-lex.m4  kpse-libpaper-flags.m4  kpse-lua52-flags.m4  kpse-lua53-flags.m4  kpse-luajit-flags.m4  kpse-mktex.m4  kpse-mpfi-flags.m4  kpse-options.m4  kpse-pkgs.m4  kpse-potrace-flags.m4  kpse-pplib-flags.m4  kpse-progs.m4  kpse-setup.m4  kpse-visibility.m4  kpse-web2c.m4  kpse-win32.m4  kpse-xpdf-flags.m4  ltargz.m4
texlive/texk/: .gitattributes  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac
texlive/utils/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
(+8305 files in other folders)
